--- a/test.tex
+++ b/test.tex
@@ -151,11 +151,11 @@ Another reason for this debate unicity-multiplicity is that pure mathematicians 
 
 %In particular, when Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. The present day string theory defines a Multiverse, leading to its reject\cite{Woigt}. However, the present article rehabiltates the most controversial \textit{tachyonic} bosonic string theory (see Fig. 1).
 
-There is also the Determinism separation, a majority believing seriously that `God plays dices'. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the recurse to the above Multiverse conundrum.
+%There is also the Determinism separation, a majority believing seriously that `God plays dices'. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the recurse to the above Multiverse conundrum.
 
-The present article settles also this debate by proposing that the Cosmos is ruled by an \textit{'Optimal Computation Principle'}. It was shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}. This article goes further, by showing they are textit{calculation bases}.
+The present article settles also the debate about determinism by proposing that the Cosmos is ruled by an \textit{'Optimal Computation Principle'}. It was shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}. This article goes further, by showing they are textit{calculation bases}.
 
-The abnormal efficiency of elementary 3-fold dimensional analysis is explained in section 5. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the elementary Holic Principle (section 9). It gives also in an elementary calculation the \textit{invariant} Hubble constant, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
+%The abnormal efficiency of elementary 3-fold dimensional analysis is explained in section 5. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the elementary Holic Principle (section 9). It gives also in an elementary calculation the \textit{invariant} Hubble constant, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
 
 Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
 
