--- a/test.tex
+++ b/test.tex
@@ -81,7 +81,7 @@ The antique concept of permanent Cosmos is reintroduced as a perfect determinist
 Contents
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-1. The debates settled by Hierarchy and Computation
+1. The Hierarchy and Computation Principles
 
 2. The Cosmic Fine-Tuning and the Topological Axis
 
@@ -142,14 +142,11 @@ Contents
 \section {The debates settled by Hierarchy and Computation}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-There is presently an intense debate in the physics community. Only a minority believes in an Ultimate Theory, while a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos, a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
+There is presently an intense debate in the physics community. While a minority believes in an Ultimate Theory, a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos, a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
 
-The origin of this discrepancy is that the unicity of Physics has been wiped out in the multiplicity of mathematics. Only a small minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also
-Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, \textit{for the first time, a series of ppb relations involves $e$, $\pi$ and $\gamma$ end central dimensionless parameters} (section 9.4). In particular, this article shows that the discovery of the sporadic groups, with, in particular, the Moonshine correlation\cite{Borcherds} is a crucial discovery for physics. 
+The origin of this debate is that the unicity of Physics has been wiped out in the multiplicity of mathematics. Only a small minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also
+Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, \textit{for the first time, a series of ppb relations involves $e$, $\pi$ and $\gamma$ and central dimensionless parameters} (section 9.4). This article shows that the discovery of the sporadic groups, with, in particular, the Moonshine correlation\cite{Borcherds} is a crucial discovery for physics. 
 
-Another reason for this debate unicity-multiplicity is that pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. However, the history of Physics shows that one can progress without knowing the ultimate laws. Tbis no-said principle can be called the \textit{'Hierarchy Principle'}. 
-
-%In particular, when Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. The present day string theory defines a Multiverse, leading to its reject\cite{Woigt}. However, the present article rehabiltates the most controversial \textit{tachyonic} bosonic string theory (see Fig. 1).
 
 There is also the Determinism separation, a majority believing seriously that `God plays dices'. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the recurse to the above Multiverse conundrum.
 
@@ -157,9 +154,16 @@ The present article settles also the debate about determinism by proposing that 
 
 %The abnormal efficiency of elementary 3-fold dimensional analysis is explained in section 5. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the elementary Holic Principle (section 9). It gives also in an elementary calculation the \textit{invariant} Hubble constant, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
 
-Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
+Another reason for the debate unicity-multiplicity is that pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. However, the history of Physics shows that one can progress without knowing the ultimate laws. This no-said principle can be called the \textit{'Hierarchy Principle'}. So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in biology, he anticipated genetics. 
 
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, the authors condidered rather the inverse of $a$ and $a_G$, noted $\alpha$and $\alpha_G$. The present article will show that our notation, following Eddington, is far more appropriate.
+In the same manner, \textit{this article prefigures the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory.  
+
+%In particular, when Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. The present day string theory defines a Multiverse, leading to its reject\cite{Woigt}. However, the present article rehabilitates the most controversial \textit{tachyonic} bosonic string theory (see Fig. 1).
+
+
+Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that almost everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
+
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, we condider rather the inverse of $\alpha$ and $\alpha_G$, noted $a$ and $a_G$. The present article will show that our notation, following Eddington, is far more appropriate.
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $\alpha$ and $\alpha_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from known physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
@@ -167,17 +171,12 @@ The existence of relations that are not explained by known physical theories, is
 
 %Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
-%\textit{This article shows that physics is a unique part of presently incomplete mathematics}. We refute here the Multiverse hypothesis by showing very precise fine-tuning (untill $10^{-9})$ precision between main physical and the mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study implies the 26 sporadic groups and confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
-
 %\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions? We propose that the parameters are optimal bases in a deterministic computing Cosmos. They appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics.
 
 The fact that three parameters, among 30, are so clearly emerging means that physics, and more generally science, follows a Hierarchical Principle: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
-So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in biology, he anticipated genetics. 
-
-In the same manner, \textit{this article prefigures the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
@@ -196,13 +195,13 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
 
 
 \begin{table*}
- \caption{Topological Axis Data with \textit{invariant} $R_{Hubble}  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc) }
+ \caption{Topological Axis Data}
   \centering
   \begin{tabular}{llllll}
     \toprule
-    \multicolumn{6}{c}{Part}                   \\
+    \multicolumn{6}{c}{with \textit{invariant} $R_{Hubble}  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc) }                   \\
     \cmidrule(r){1-6}
-   Element Name     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions \\
+   Physical element     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions \\
     \midrule
     string & 0  & 2 & 0.347 &  & $ m_{string} \approx$ 2.1~ MeV ~? \\
     gluon  & 1 & 6 & 1.040 &  & $m_{gluon} \approx$ 8.6~ MeV ~? \\  
