--- a/test.tex
+++ b/test.tex
@@ -199,7 +199,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
   \centering
   \begin{tabular}{llllll}
     \toprule
-    \multicolumn{6}{c}{with \textit{invariant Hubble radius} $R  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc)}                   \\
+    \multicolumn{6}{c}{with \textit{invariant Hubble radius} $R  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc), \lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m}                   \\
     \cmidrule(r){1-6}
    Physical element     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions \\
     \midrule
