--- a/test.tex
+++ b/test.tex
@@ -199,7 +199,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
   \centering
   \begin{tabular}{llllll}
     \toprule
-    \multicolumn{6}{c}{with \textit{invariant Hubble radius} $R  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc), $\lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m$, $T = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$}                   \\
+    \multicolumn{6}{c}{with \textit{invariant Hubble radius} $R  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc), $\lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m$, $T = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s, ggggggggggggggggggggg$}                   \\
     \cmidrule(r){1-6}
    Physical element     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions \\
     \midrule
