--- a/test.tex
+++ b/test.tex
@@ -195,7 +195,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
 
 
 \begin{table*}
- \caption{Topological Axis Data with $R  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc)} R\{GC} = 2r_e^6/p_P^5\approx 9.0757\cdot10^{86}m
+ \caption{Topological Axis Data with $R  \approx$ 13.812 ~Gly (70.790 km/s$\cdot$Mpc, $R\{GC} = 2r_e^6/p_P^5\approx 9.0757\cdot10^{86}m$)} 
   \centering
   \begin{tabular}{llllll}
     \toprule
