--- a/test.tex
+++ b/test.tex
@@ -141,7 +141,7 @@ Contents
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {The debates settled by Hierarchy and Computation}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-%R\{GC} = 2r_e^6/l_P^5\approx 9.0757\cdot10^{86}m$
+$R\{GC} = 2r_e^6/l_P^5\approx 9.0757\cdot10^{86}m$
 There is presently an intense debate in the physics community. While a minority believes in an Ultimate Theory, a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos, a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
 
 The origin of this debate is that the unicity of Physics has been wiped out in the multiplicity of mathematics. Only a small minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also
