--- a/test.tex
+++ b/test.tex
@@ -139,11 +139,11 @@ Contents
 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-\section {The debates settled by Hierarchy and Computation}
+\section {The Hierarchy and Computation Principles}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-$R\{GC} = 2r_e^6/l_P^5\approx 9.0757\cdot10^{86}m$
-There is presently an intense debate in the physics community. While a minority believes in an Ultimate Theory, a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos, a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
 
+There is presently an intense debate in the physics community. While a minority believes in an Ultimate Theory, a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos, a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
+$$$R\{GC} = 2r_e^6/l_P^5\approx 9.0757\cdot10^{86}m$$
 The origin of this debate is that the unicity of Physics has been wiped out in the multiplicity of mathematics. Only a small minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also
 Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, \textit{for the first time, a series of ppb relations involves $e$, $\pi$ and $\gamma$ and central dimensionless parameters} (section 9.4). This article shows that the discovery of the sporadic groups, with, in particular, the Moonshine correlation\cite{Borcherds} is a crucial discovery for physics. 
 
