--- a/test.tex
+++ b/test.tex
@@ -142,41 +142,27 @@ Contents
 \section {The Hierarchy and Computation Principles}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-There is presently an intense debate in the physics community. While a minority believes in an Ultimate Theory, a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos, a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
-%$$R\{GC} = 2r_e^6/l_P^5 \approx 9.0757\cdot10^{86}\cdot m$$
-The origin of this debate is that the unicity of Physics has been wiped out in the multiplicity of mathematics. Only a small minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also
-Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, \textit{for the first time, a series of ppb relations involves $e$, $\pi$ and $\gamma$ and central dimensionless parameters} (section 9.4). This article shows that the discovery of the sporadic groups, with, in particular, the Moonshine correlation\cite{Borcherds} is a crucial discovery for physics. 
+There is presently an intense debate in the physics community. While a minority believes in an Ultimate Theory, a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos (section 4), a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
 
+Only a minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, we show in section 2 that \textit{the later obeys the Topological Axis (Fig. (1), and, for the first time, they are connected with a series of ppb relations involving $e$, $\pi$ and $\gamma$} (section 9.4). This article shows also that the discovery of the sporadic groups, with, in particular, the monstruous moonshine correlation\cite{Borcherds}, is a crucial discovery for physics (section 8.5).
 
-There is also the Determinism separation, a majority believing seriously that `God plays dices'. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the recurse to the above Multiverse conundrum.
+In this debate unicity-multiplicity, pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. However, the history of Physics shows that one can progress without knowing the ultimate laws. This no-said principle can be called the \textit{'Hierarchy Principle'}. So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in biology, he anticipated genetics. In the same manner, \textit{this article prefigures the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. We interpret this central role of whole numbers by assuming that the Cosmos is a perfect computer. This is the very foundation of quantum physics. The section 3 shows the overall holographic quantification, breaking the Planck wall by a factor $10^{61}$, and \textit{justifying why the Cosmos is so large}.
 
-The present article settles also the debate about determinism by proposing that the Cosmos is ruled by an \textit{'Optimal Computation Principle'}. It was shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}. This article goes further, by showing they are textit{calculation bases}.
+This \textit{'Optimal Computation Principle'} enligths the First Principle of Thermodynamics, the energy conservation. This is a more direct and logical explanation than the standard 'time uniformity'. Thus, Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: \textit{why one asks question ?}. 
 
-%The abnormal efficiency of elementary 3-fold dimensional analysis is explained in section 5. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the elementary Holic Principle (section 9). It gives also in an elementary calculation the \textit{invariant} Hubble constant, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
+\textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the above recurse to the Multiverse conundrum.
 
-Another reason for the debate unicity-multiplicity is that pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. However, the history of Physics shows that one can progress without knowing the ultimate laws. This no-said principle can be called the \textit{'Hierarchy Principle'}. So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in biology, he anticipated genetics. 
+While it was already shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}, this article goes further, by showing they are textit{calculation bases}.
 
-In the same manner, \textit{this article prefigures the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory.  
+The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the elementary Holic Principle. An elementary calculation gives also the \textit{invariant} Hubble constant, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
 
-%In particular, when Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. The present day string theory defines a Multiverse, leading to its reject\cite{Woigt}. However, the present article rehabilitates the most controversial \textit{tachyonic} bosonic string theory (see Fig. 1).
+Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that almost everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
 
-
-Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that almost everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
-
-It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, we condider rather the inverse of $\alpha$ and $\alpha_G$, noted $a$ and $a_G$. The present article will show that our notation, following Eddington, is far more appropriate.
+Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. The key is the analysis of the dimensionless parameters (about 30 in the standard model), which are tightly contrived by a mysterious 'fine-tuning'. Happily, the Hierarchy Principle applies:  only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.4 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, we consider rather the inverse of $\alpha$ and $\alpha_G$, we note $a$ and $a_G$. The present article will show that our notation, following Eddington\cite{Eddington}, is far more appropriate.
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $\alpha$ and $\alpha_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from known physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed \cite{Eddington}, must be permanent}. Extending this to the standard spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the starting point of Coherent Cosmology \cite{Sanchez1}.
-
-%Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
-
-%\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions? We propose that the parameters are optimal bases in a deterministic computing Cosmos. They appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
-
-\textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics.
-
-The fact that three parameters, among 30, are so clearly emerging means that physics, and more generally science, follows a Hierarchical Principle: \textit{one can progress without knowing the details of the underlying fundamental theory.}
-
+However, as soon as the fine-tuning involves the observable Universe radius, it signals the existence of a fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed \cite{Eddington}, must be permanent}. Extending this to the standard spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the starting point of Coherent Cosmology \cite{Sanchez1}.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
@@ -1125,6 +1111,11 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+
+
+%In particular, when Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. The present day string theory defines a Multiverse, leading to its reject\cite{Woigt}. However, the present article rehabilitates the most controversial \textit{tachyonic} bosonic string theory (see Fig. 1).
+
+%Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
 This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So,
 while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
