--- a/test.tex
+++ b/test.tex
@@ -152,7 +152,7 @@ This \textit{'Optimal Computation Principle'} enligths the First Principle of Th
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the above recurse to the Multiverse conundrum.
 
-While it was already shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}, this article goes further, by showing they are textit{calculation bases}.
+While it was already shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}, this article goes further, by showing they are \textit{calculation bases}.
 
 The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the elementary Holic Principle. An elementary calculation gives also the \textit{invariant} Hubble constant, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
 
@@ -1263,9 +1263,12 @@ Submitted on April 1st, 2019 / Accepted on April 6th, 2019
 \bibitem{Carr} Carr B.J. and Rees M.J., ``The anthropic principle and the
 structure of the physical world'', Nature 278, 605--612 (1979).
 
-\bibitem{Eddington} Eddington A.S. ``The Fundamental Theory'' (Cambridge, 1946).
+\bibitem{Borcherds} Borcherds and Richard. ``Monstruous Moonshine and Monstruous Lie
+Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
 \bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer. Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org:1601.0011 (2017). Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
+
+\bibitem{Eddington} Eddington A.S. ``The Fundamental Theory'' (Cambridge, 1946).
 
 \bibitem{Bonvin} V. Bonvin, F. Courbin, S. H. Suyu, P. J. Marshall, C. E. Rusu, D. Sluse, M. Tewes, K. C. Wong, T. Collett, C. D. Fassnacht, T. Treu, M. W. Auger, S. Hilbert, L. V. E. Koopmans, G. Meylan, N. Rumbaugh, A. Sonnenfeld, C. Spiniello ``H0LiCOW V. New COSMOGRAIL time delays of HE0435-1223: H0 to 3.8\% precision from strong lensing in a flat $\Lambda$CDM model'', arXiv: astro-ph/1607.01790v2 (2016).
 
@@ -1326,9 +1329,6 @@ connection''. Astrophys. Space Sci. 285(2):429 (2006).
 \bibitem{Nieto} Nieto M. and Anderson J. ``Using early data to illuminate the
 Pioneer anomaly''. Pi Class. Quant. Grav. 22, 5345-5354 (2005);
 arXiv:ge-qc/0507052.
-
-\bibitem{Borcherds} Borcherds and Richard. ``Monstruous Moonshine and Monstruous Lie
-Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
 \bibitem{Bars} Bars I. ``Gauge Duality, Conformal Symmetry, and Space-Time with
 Two Times''. Phys. Rev. D 58 (1998); hep-th/9803188, 
