--- a/test.tex
+++ b/test.tex
@@ -1112,30 +1112,36 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
+The present article confirms the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-
+physics, taking the electron wavelength as unity. \textit {the double logarithm representation was the simplest one, and it appeared later this was the reunion of a serie of height 1D-2D holographic relations, respecting the topologico-algebric Bott period}.
 
-%In particular, when Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. The present day string theory defines a Multiverse, leading to its reject\cite{Woigt}. However, the present article rehabilitates the most controversial \textit{tachyonic} bosonic string theory (see Fig. 1).
+The pertinence of the Topological Axis confirms the importance of the electron wavy propagation. This rehabilitates the string theory, including the \textit{tachyonic} bosonic version, since the canonical dimension 26 appears to characterize the observable
+universe radius $R$, and also the gravitaton mass. Hence $c$ cannot be a maximal speed: it is shown both by logic (it is far too slow) and by the quantum non-locality.
 
-%Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
+Indeed, excluding $c$ from the simplest tool of elementary physics, the prospective dimensional analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature and the cosmic super-cycle periodicity, which connects with the holic dimension n = 30 in the Topological Axis, whose initial asymmetry suggested directly the existence of a Grandcosmos.
 
-This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So,
-while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the
-`Inverse Anthropic Principle` is more logical, stating that an all-deterministic single Cosmos
-implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-
-called `theory` with too much missing links \cite{Chauvin}. The fundamental hypothesis of
-this article is that the Cosmos is a computer. A common point with the brain is the multi-base
-character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi
-question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a
-dogmatic community. The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least a part of these works is very pertinent.
+While it is claimed that String Theory do not connect with experiment, the Bott periodicity
+The application of the old direct scientific method, looking for fine tuning between physical parameters lead to a return to the Perfect Cosmological Principle implying a steady-state Cosmos, confirmed by holographic relations. The standard cosmological principle was unduly limited to spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do
+not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave Cosmic Background, which identifies with the Grandcosmos Frame. Meanwhile, the Kotov period is an absolute clock, the dephasage of coherent oscillations between quasars being ruled by the tachyonic celerity.
+
+The standard Holographic Principle must be generalized to wavelengths others than the Planck
+length, in particular the topon, the visible Universe wavelength, in 1D holography, which breaks
+another taboo of current thinking: the Planck wall, by an enormous factor, about $10^{61}$, resolving the
+vacuum energy dilemma factor $10^{122}$, and sustaining the Oscillatory bounce model which unfies the two main cosmologies.
+
+Eddington interpreted rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. 
+
+When Eddington\cite{Eddington} dared to apply the exclusion principle in cosmology, his theory was discarded by a majority. Fortunately, the large theoretical advance of Eddington is now recognized \cite{Durham}, but without mentioning a crucial point: \textit{he predicted the tau fermion with a right order of mass}, 30 years before its surprising discovery, calling it Heavy Mesotron \cite{Eddington}. 
+
+The present day string theory seems to lead to a Multiverse, while this string theory is criticised \cite{Woigt}. However, the Topological Axis (Fig. 1) rehabilitates definitely the most controversial \textit{tachyonic} bosonic string theory.
+
+This article confirms direct connections \cite{Sanchez1} between physical and biological parameters. So, while the `Anthropic Principle` states that Life implies a favored Cosmos among a Multiverse, the `Inverse Anthropic Principle` is more logical, stating that an all-deterministic single Cosmos implies Life, in contradiction with the Darwin `accidental life` approach, a generally admitted so-called `theory` with too much missing links \cite{Chauvin}. The fundamental hypothesis of this article is that the Cosmos is a computer. A common point with the brain is the multi-base character, experienced in musical sensation. Thus, \textit{intelligent life must be universal}. The famous Fermi question `where are they ?` is not a paradox, since any abnormal observation is \textit{a-priori} rejected by a dogmatic community. The same rejection seems to apply now to the Sternheimer 'scale wave' and Atiyah's last work. The present article shows that at least parts of these works are very pertinent.
+
+The high precision of some relations, untill ppb, prove that the traditional scientific thinking is not at all baffled by
+the physical parameter values, meaning they are mere mathematical constants. In this respect, the
+high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, with lesser precision, the background temperature, must be saluted as decisive achievements.
 
 The pertinence of our simple polynomial relations cannot be admitted by the standard community, arguing for instance that since the proton is composite, its mass cannot enter simple relations. The same argument is presented for the theoretical dependence of the electric constant $a$ with other constants, or with the energy level. These are reductionist arguments, unable to explain the fine-tuning phenomena, and leading to the sterile concept of unexplained emergences. By contrast, the holistic approach implies the concept of \textit{immergences}, resulting from the ancestral idea that Cosmos simplicity is the real origin of Science. It is strange, and troubling, that this term \textit{immergence} is a neologism.
-
-The application of the old direct scientific method, looking for fine tuning between physical
-parameters leads to a return to the Perfect Cosmological Principle implying a steady-state Cosmos,
-confirmed by holographic relations. The standard cosmological principle was unduly limited to
-spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do
-not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave
-Cosmic Background, which identifies with the Grandcosmos Frame. Meanwhile, the Kotov period is an
-absolute clock, the dephasage of coherent oscillations between quasars being ruled by the tachyonic celerity.
 
 The simplest topological equations, the equality between dimensionless topological varieties,
 circumference, area, volume... appear to apply in cosmology, which, for many, seems to be the hardiest
@@ -1147,35 +1153,12 @@ equations, the Holic Principle, shows direct pertinence. In particular, it empha
 dimensions, which appear decisive in the Topological Axis, and are identified with the sum of 26 string
 dimensions and 4 of usual space-time.
 
-The standard Holographic Principle must be generalized to wavelengths others than the Planck
-length, in particular the topon, the visible Universe wavelength, in 1D holography, which breaks
-another taboo of current thinking: the Planck wall, by an enormous factor, about $10^{61}$, resolving the
-vacuum energy dilemma factor $10^{122}$, and sustaining the Oscillatory bounce model which unfies the two main cosmologies.
-
-The high precision of relations prove that the traditional scientific thinking is not at all baffled by
-the physical parameter values, meaning they are mere mathematical constants. In this respect, the
-high precision in the measurement of the Electric and Fermi constants, Proton, Neutron and Muon masses, Kotov cosmic period, and, with far lesser precision, the background temperature, must be saluted as decisive achievements.
-
 In particular, the simplest method of looking for simple monomial expressions leads to ppb correlations, confirming Cosmos Unicity. As Atiyah wrote \cite{Atiyah1}: \textit{`Nobody has
 ever wondered what the Universe would be if $\pi$ were not equal to 3.14159.... Similarly no one
 should be worried what the Universe would be if $a$ were not 137.035999...}` This is a definite
 rejection of the Multiverse Hypothesis.
 
-The present article confirms also the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-
-physics, taking the electron wavelength as unity. \textit {the double logarithm representation was the simplest one, and it appeared later this was the reunion of a serie of height 1Q-2D holographic relations, respecting the algebric Bott period}.
-
-The pertinence of the Topological Axis confirms
-the importance of the electron wavy propagation. This rehabilitates the string theory, including the
-\textit{tachyonic} bosonic version, since the canonical dimension 26 appears to characterize the observable
-universe radius $R$, and also the gravitaton mass. Hence $c$ cannot be a maximal speed: it is shown both by
-logic (it is far too slow) and by the quantum non-locality.
-
-Indeed, excluding $c$ from the simplest tool of elementary physics, the prospective dimensional
-analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature and the cosmic super-cycle periodicity, which connects with the holic dimension n = 30 in the
-Topological Axis, whose apparent asymmetry suggests directly the existence of a Grandcosmos.
-
-While it is claimed that String Theory do not connect with experiment, the Bott periodicity
-appears, not only in the general organisation of the Topological Axis, but also by unifying in particular the gauge bosons, so confirming the Standard Model of Particle Physics. However gluons must be massive which is independently seriously considered \cite{Larin}.
+appears, not only in the general organisation of the Topological Axis, but also by unifying in particular the gauge bosons, so confirming the Standard Model of Particle Physics. However gluons must be massive, an hypothesis which is independently seriously considered \cite{Larin}.
 
 This means also that the International System must go back to only three fundamental unities,
 Mass, Length and Time. The distinction between Length and Time must be emphasized, as
