--- a/test.tex
+++ b/test.tex
@@ -1112,15 +1112,12 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-The present article confirms the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-
-physics, taking the electron wavelength as unity. \textit {the double logarithm representation was the simplest one, and it appeared later this was the reunion of a serie of height 1D-2D holographic relations, respecting the topologico-algebric Bott period}.
+The present article confirms the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-physics, taking the electron reduced Compton wavelength as unity. \textit {the double logarithm representation was the simplest one, and it appeared later this was the reunion of a serie of height 1D-2D holographic relations, respecting the topologico-algebric Bott period}.
 
-The pertinence of the Topological Axis confirms the importance of the electron wavy propagation. This rehabilitates the string theory, including the \textit{tachyonic} bosonic version, since the canonical dimension 26 appears to characterize the observable
-universe radius $R$, and also the gravitaton mass. Hence $c$ cannot be a maximal speed: it is shown both by logic (it is far too slow) and by the quantum non-locality.
+The pertinence of the Topological Axis confirms the importance of the electron wavy propagation. While it is claimed that String Theory do not connect with experiment, this is its rehabilitation, including the \textit{tachyonic} bosonic version, since the canonical dimension 26 appears to characterize the observable universe radius $R$, together with the gravitaton mass. Hence $c$ cannot be a maximal speed: it is shown both by logic (it is far too slow) and by the quantum non-locality.
 
 Indeed, excluding $c$ from the simplest tool of elementary physics, the prospective dimensional analysis, this gives immediately a very good approximation of both R/2, the cosmic temperature and the cosmic super-cycle periodicity, which connects with the holic dimension n = 30 in the Topological Axis, whose initial asymmetry suggested directly the existence of a Grandcosmos.
 
-While it is claimed that String Theory do not connect with experiment, the Bott periodicity
 The application of the old direct scientific method, looking for fine tuning between physical parameters lead to a return to the Perfect Cosmological Principle implying a steady-state Cosmos, confirmed by holographic relations. The standard cosmological principle was unduly limited to spatial homogeneity. The relativity theory, unable to define an inertial frame, is a local one and do
 not apply to Cosmology at large: the Absolute Space is reestablished, realized by the Microwave Cosmic Background, which identifies with the Grandcosmos Frame. Meanwhile, the Kotov period is an absolute clock, the dephasage of coherent oscillations between quasars being ruled by the tachyonic celerity.
 
