--- a/test.tex
+++ b/test.tex
@@ -182,7 +182,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
 %R\{GC} = 2r_e^6/l_P^5\approx 9.0757\cdot10^{86}m$
 
 \begin{table*}
- \caption{Topological Axis Data with $R = 2\hbar^2/Gm_em_pm_H~ \approx 13.812 Glyr,R_{GC}=2r_e^6/l_P^5\approx 9.0758\cdot 10^{86}~m $}  
+ \caption{Topological Axis Data with $R = 2\hbar^2/Gm_em_pm_H~ \approx 13.812~ Glyr,R_{GC}=2r_e^6/l_P^5\approx 9.0758\cdot 10^{86}~m $}  
   \centering
   \begin{tabular}{llllll}
     \toprule
