--- a/test.tex
+++ b/test.tex
@@ -188,7 +188,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
     \toprule
     \multicolumn{6}{c}{$\lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m$, $T = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s$}                   \\
     \cmidrule(r){1-6}
-   Physical element     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions \\
+   Physical element     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions~($r_e = \lambdabar_e/a$) \\
     \midrule
     string & 0  & 2 & 0.347 &  & $ m_{string} \approx$ 2.1~ MeV ~? \\
     gluon  & 1 & 6 & 1.040 &  & $m_{gluon} \approx$ 8.6~ MeV ~? \\  
@@ -198,7 +198,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
     Higgs Boson & - & $\gamma\Gamma \approx$ 14.533 & 2.518 &lnln(2.449$~\cdot~10^5)\approx$ 2.518& $m_{Higgs} \approx$ 125.175$~ GeV ~$ ? \\ 
     Thermal Photon & 4  & 18 & 3.119 & lnln($hc/2k\theta_{CMB}\lambdabar_e) \approx$ 3.035 &  \\
     Boson GUT pion & 5  & 22 & 3.812 & & $m_{GUT} \approx 2.30\cdot 10^{16}$ GeV \\
-    Photon & 5.5  & 24 & 4.159 & & $m_{ph} = \hbar/cl_K \approx 1.2\cdot 10^{-55}$kg? \\
+    Photon & 5.5  & 24 & 4.159 & & $m_{ph} = \hbar/cl_K \approx 1.2\cdot 10^{-55}$~kg? \\
     Kotov perimeter & 5.5  & 24 & 4.159 & & lnln($2\pi l_K /r_e)\approx 4.159$ \\
     Hubble perimeter & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R /\lambdabar_e)\approx$ 4.5059  \\
     Graviton & 6  & 26 & 4.505 &  & $ m_{gr} \approx 3.7\cdot 10^{-67}$ kg ~? \\
