--- a/test.tex
+++ b/test.tex
@@ -188,7 +188,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
     \toprule
     \multicolumn{6}{c}{$\lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m$, $T = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s, l_K = \lambdabar_e(a_Ga_w)^{1/2}$}                   \\
     \cmidrule(r){1-6}
-   Physical element     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions~($r_e = \lambdabar_e/a$) \\
+   Physical element     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions~($r_e = \lambdabar_e/a, t_e=\lambdabar_e/c$) \\
     \midrule
     string & 0  & 2 & 0.347 &  & $ m_{string} \approx$ 2.1~ MeV ~? \\
     gluon  & 1 & 6 & 1.040 &  & $m_{gluon} \approx$ 8.6~ MeV ~? \\  
