--- a/test.tex
+++ b/test.tex
@@ -182,11 +182,11 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
 %R\{GC} = 2r_e^6/l_P^5\approx 9.0757\cdot10^{86}m$
 
 \begin{table*}
- \caption{Topological Axis Data with $R = 2\hbar^2/Gm_em_pm_H~ \approx 13.812~ Glyr,R_{GC}=2r_e^6/l_P^5\approx 9.0758\cdot 10^{86}~m $}  
+ \caption{Topological Axis Data with $R = 2a_G\lambdabar_e=2\hbar^2/Gm_em_pm_H~ \approx 13.812~ Glyr,R_{GC}=2r_e^6/l_P^5\approx 9.0758\cdot 10^{86}~m $}  
   \centering
   \begin{tabular}{llllll}
     \toprule
-    \multicolumn{6}{c}{$\lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m$, $T = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s, l_K = \lambdabar_e(a_Ga_w)^{1/2}, m_{gr}=a_wm_{gr}\approx 1.222\cdot10^{-55}kg$}                   \\
+    \multicolumn{6}{c}{$\lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m$, $T = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s, l_K = \lambdabar_e(a_Ga_w)^{1/2}, m_{ph}=a_wm_{gr}\approx 1.222\cdot10^{-55}kg$}                   \\
     \cmidrule(r){1-6}
    Physical element     & k     & d = 4k+2 & lnln(f(d)) & lnln(Measured ratio)\cite{Tanabashi} & Predictions~($\lambdabar_e = ar_e = ct_e$) \\
     \midrule
@@ -198,10 +198,10 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
     Higgs Boson & - & $\gamma\Gamma \approx$ 14.533 & 2.518 &lnln(2.449$~\cdot~10^5)\approx$ 2.518& $m_{Higgs} \approx$ 125.175$~ GeV ~$ ? \\ 
     thermal photon & 4  & 18 & 3.119 & lnln($hc/2k\theta_{CMB}\lambdabar_e) \approx$ 3.035 &  \\
     boson GUT & 5  & 22 & 3.812 & & $m_{GUT} \approx 2.30\cdot 10^{16}~?$ \\
-    photon & 5.5  & 24 & 4.159 & & $m_{ph} = \hbar/cl_K \approx 1.2\cdot 10^{-55}~kg~?$ \\
+    photon & 5.5  & 24 & 4.159 & & $lnln(m_N/m_{ph})\approx 4.130$ \\
     Kotov perimeter & 5.5  & 24 & 4.159 &lnln($2\pi l_K /r_e)\approx 4.159$ &  \\
     Hubble perimeter & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R /\lambdabar_e)\approx$ 4.5059  \\
-    graviton & 6  & 26 & 4.505 &  & $ m_{gr}= m_{ph}/a_w \approx 3.7\cdot 10^{-67} kg?$ \\
+    graviton & 6  & 26 & 4.505 &  & $lnln(m_N/m_{gr})\approx 4.485$ \\
     Supercycle period & 7  & 30 & 5.199 & & lnln$(T/t_e) \approx$ 5.199 \\
     topon & - & 2$e^e$ & 5.253 &  & lnln$(\lambdabar_e/\lambdabar_M) \approx$ 5.523 \\
     Grandcosmos & $e^2$  & - & 5.432 & & lnln$(R_{GC}/\lambdabar_e)\approx$ 5.433  \\
