--- a/test.tex
+++ b/test.tex
@@ -198,10 +198,10 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
     Higgs Boson & - & $\gamma\Gamma \approx$ 14.533 & 2.518 &lnln(2.449$~\cdot~10^5)\approx$ 2.518& $m_{Higgs} \approx$ 125.175$~ GeV ~$ ? \\ 
     thermal photon & 4  & 18 & 3.119 & lnln($hc/2k\theta_{CMB}\lambdabar_e) \approx$ 3.035 &  \\
     boson GUT & 5  & 22 & 3.812 & & $m_{GUT} \approx 2.30\cdot 10^{16}~?$ \\
-    photon & 5.5  & 24 & 4.159 & & $lnln(m_N/m_{ph})\approx 4.130$ \\
+    photon & 5.5  & 24 & 4.159 & & lnln$(m_N/m_{ph})\approx 4.130$ \\
     Kotov perimeter & 5.5  & 24 & 4.159 &lnln($2\pi l_K /r_e)\approx 4.159$ &  \\
     Hubble perimeter & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R /\lambdabar_e)\approx$ 4.5059  \\
-    graviton & 6  & 26 & 4.505 &  & $lnln(m_N/m_{gr})\approx 4.485$ \\
+    graviton & 6  & 26 & 4.505 &  & lnln$(m_N/m_{gr})\approx 4.485$ \\
     Supercycle period & 7  & 30 & 5.199 & & lnln$(T/t_e) \approx$ 5.199 \\
     topon & - & 2$e^e$ & 5.253 &  & lnln$(\lambdabar_e/\lambdabar_M) \approx$ 5.523 \\
     Grandcosmos & $e^2$  & - & 5.432 & & lnln$(R_{GC}/\lambdabar_e)\approx$ 5.433  \\
